# fast-wc-rust

./: .gitattributes  .gitignore  README.md
.github/workflows/: static.yml
compare/: README.md  run-all.sh
compare/generate-files/: README.md  do-compare.sh  generate-large-files.py
compare/ken-bench/: do-compare.sh
compare/rust-bench/: README.md  benchmark_comparison.py  do-compare.sh  pyproject.toml
compare/rust-bench/criterion/report/: index.html
compare/rust-bench/criterion/rust_vs_cpp/cpp_binary/base/: estimates.json  tukey.json
compare/rust-bench/criterion/rust_vs_cpp/cpp_binary/new/: benchmark.json  sample.json
compare/rust-bench/criterion/rust_vs_cpp/cpp_binary/report/: index.html
compare/rust-bench/criterion/rust_vs_cpp/report/: index.html
compare/rust-bench/criterion/rust_vs_cpp/rust_optimal/base/: sample.json  tukey.json
compare/rust-bench/criterion/rust_vs_cpp/rust_optimal/change/: estimates.json
compare/rust-bench/criterion/rust_vs_cpp/rust_optimal/new/: benchmark.json  estimates.json
compare/rust-bench/criterion/rust_vs_cpp/rust_optimal/report/: index.html
compare/rust-bench/criterion/word_counting/100files_1024bytes/report/: index.html
compare/rust-bench/criterion/word_counting/10files_102400bytes/report/: index.html
compare/rust-bench/criterion/word_counting/report/: index.html
competitors/: README.md
competitors/fast-cpp/: compile.sh  fast-wc.cpp
fast-wc-rust/: Cargo.toml
fast-wc-rust/benches/: word_count_bench.rs
fast-wc-rust/src/: lib.rs  main.rs
(+762 files in other folders)
