[package]
name = "fast-wc-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
crossbeam = "0.8.4"
memmap2 = "0.9.8"
num_cpus = "1.17.0"
rayon = "1.11.0"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.7.0"
tempfile = "3.23.0"

[[bench]]
name = "word_count_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
